todo medio funcionando, salto inicial a login no va i da solo 1 error de los 2, pasamos a arreglar. valorar volver a aqui

--- a/staff/adria-arquimbau/initial-app/index.html
+++ b/staff/adria-arquimbau/initial-app/index.html
@@ -38,6 +38,7 @@
                 <input type="password" id="password" required minlength="4">
             </div>
                 <div>
+                <p class="errorTextRegister"></p>
                 <button type="submit">Register</button>
                 </div>
             </form>
@@ -56,6 +57,8 @@
                 <input type="email" id="email">
                 <label for="password">Password</label>
                 <input type="password" id="password">
+                <p class="errorTextLoginWrong"></p>
+                <p class="errorTextLoginEmpty"></p>
                 <button type="submit">Login</button>
             </form>
             <a href="">back</a>
@@ -68,6 +71,7 @@
         </section>
     </main>
 
+    <script src="curray.js"></script>
     <script src="main.js"></script>
 </body>
 
