--- a/staff/lluis-agusti/initial-app/index.html
+++ b/staff/lluis-agusti/initial-app/index.html
@@ -29,6 +29,7 @@
                 <input type="email" id="email"  minlength="5" maxlength="19" placeholder="Email"><br><br>
                 <label for="password">Password</label>
                 <input type="password" id="password" minlength="5" maxlength="19" placeholder="Password"><br><br>
+                <p class="errorTextRegister"></p>
                 <button class="button" type="submit">Register</button>
             </form>
             <a class="button" href="">Back</a>
@@ -45,7 +46,9 @@
                 <label for="email">E-mail</label>
                 <input type="email" id="email" minlength="5" maxlength="19" placeholder="Email"><br><br>
                 <label for="password">Password</label>
-                <input type="password" id="password"  minlength="4" maxlength="19" placeholder="Password"><br><br>
+                <input type="password" id="password"  minlength="4" maxlength="19"  placeholder="Password"><br><br>
+                <p class="errorTextLoginEmpty"></p>
+                <p class="errorTextLoginWrong"></p>
                 <button class="button" type="submit">Login</button>
             </form>
         </section>
@@ -57,6 +60,7 @@
             <a class="button" href="">back to the future</a>
         </section>
     </main>
+
     <script src="curray.js"></script>
     <script src="main.js"></script>
 </body>
