--- a/staff/manuel-barzi/initial-app/0/index.html
+++ b/staff/manuel-barzi/initial-app/0/index.html
@@ -31,6 +31,7 @@
                 <input type="password" id="password">
                 <button type="submit">Register</button>
             </form>
+            <p class="panel__feedback"></p>
             <a href="">back</a>
         </section>
 
