update amb fallos

--- a/staff/adria-arquimbau/initial-app/Fet per mi 0.1/index.html
+++ b/staff/adria-arquimbau/initial-app/Fet per mi 0.1/index.html
@@ -35,7 +35,7 @@
             </div>
                 <div>
                 <label for="password">Password</label>
-                <input type="password" id="password" required minlength="4">
+                <input type="password" id="password">
             </div>
                 <div>
                 <p class="errorTextRegister"></p>
