--- a/staff/oihane-unciti/initial-app/1/index.html
+++ b/staff/oihane-unciti/initial-app/1/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -30,7 +31,9 @@
                 <input type="password" id="password">
                 <button type="submit">Register</button>
             </form>
+            
             <a href="">back</a>
+            <h4 class="letter--hide">Error credentials!</h4>
         </section>
 
         <!-- register success panel -->
@@ -42,23 +45,24 @@
         <section class="panel panel--hide">
             <form>
                 <label for="email">E-mail</label>
-                <input type="email" id="email2">
+                <input type="email" id="email">
                 <label for="password">Password</label>
-                <input type="password" id="password2">
+                <input type="password" id="password">
                 <button type="submit">Login</button>
             </form>
+            
             <a href="">back</a>
+            <h4 class="letter--hide">Error credentials!</h4>
         </section>
 
         <!-- welcome panel -->
         <section class="panel panel--hide">
             <h2>Welcome!</h2>
-            <a href="">back</a>
         </section>
     </main>
 
+    <script src="curray.js"></script>
     <script src="main.js"></script>
-
 </body>
 
 </html>
