--- a/staff/nestor-llorens/initial-app/index.html
+++ b/staff/nestor-llorens/initial-app/index.html
@@ -31,7 +31,9 @@
                 <input type="password" id="password">
                 <button type="submit">Register</button>
             </form>
+            
             <a href="">back</a>
+            <h2 id="error"></h2> 
         </section>
 
         <!-- register success panel -->
