--- a/staff/ara-manjon/initial-app/index.html
+++ b/staff/ara-manjon/initial-app/index.html
@@ -36,7 +36,8 @@
                 <label for="email">Email</label>
                 <input type="email" id="email" required placeholder="email" >
                 <label for="password">Password</label>
-                <input type="password" id="password"  required minlength="4" maxlength="8" placeholder="password">
+                <input type="password" id="password"  required placeholder="password">
+                <p class='panel panel--error'></p>
                 <button type="submit">Register</button>
 
             </form>
@@ -67,6 +68,7 @@
         </secction>
 
     </main>
+    <!-- <script src="curray.js"></script> -->
     <script src="main.js"></script>
 
 </body>
