added new files

--- a/staff/albert-fuente/initial-app/index.html
+++ b/staff/albert-fuente/initial-app/index.html
@@ -25,7 +25,8 @@
             <label for="">Email:</label>
             <input class="register__email" type="email">
             <label for="">Password:</label>
-            <input class="register__pw" type="email">
+            <input class="register__pw" type="text">
+            <p class="credentialError"></p>
             <button class="register__button" type="submit">Register</button>
             <button class="register__backButton" type="submit">Go back</button>
 
@@ -43,13 +44,12 @@
             <input type="email"class="login__email">
             <label for="">Password:</label>
             <input type="email" class="login__pw">
-            <p class="credentialError"></p>
+            <p class="credentialError2"></p>
             <button type="sumbit" class="login-button">Log in</button>
             <button class="login__backButton" type="submit">Go back</button>
 
     </div>
-
-    <script src="main.js"></script>
     <script src="curray.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
