add first version of initial app with curray

--- a/staff/carolina-zhou/initial-app/index.html
+++ b/staff/carolina-zhou/initial-app/index.html
@@ -88,7 +88,7 @@
                 </li>                
             </ul>
         </form>
-        <a class="login__back" href="">back</a>
+        <a class="login__back" href="">go back</a>
       </div>
     </section>
 
@@ -112,6 +112,7 @@
     <p>Skylab Coders Academy ❤ Carolina Zhou Lin</p>
   </footer>
 
+  <script src="curray.js"></script>
   <script src="main.js"></script>
 </body>
 
