add existing email user message

--- a/staff/christian-haag/initial-app/index.html
+++ b/staff/christian-haag/initial-app/index.html
@@ -30,6 +30,7 @@
                 <label for="password">Password*</label>
                 <input type="password" id="password" required>
                 <button type="submit">Register</button>
+                <p class="alert"></p>
             </form>
             <a href="">back</a>
         </section>
