--- a/staff/josep-boix/mucho-layout/mobile/index.html
+++ b/staff/josep-boix/mucho-layout/mobile/index.html
@@ -38,60 +38,88 @@
     <main>
         <section class="main__images">
             <figure class="img"><img src="https://source.unsplash.com/random/800x550" alt="foto random"></figure>
-            <figure class="img"><img src="https://source.unsplash.com/random/800x550" alt="foto random"></figure>
+            <figure class="img"><img src="https://source.unsplash.com/random/800x551" alt="foto random"></figure>
             <figure class="img"><img src="https://cdn2.ticbeat.com/src/uploads/2017/07/luucha-5-paises-contra-contaminacion-810x736.jpg?x32709" alt=""></figure>
-            <figure class="img"><img src="https://source.unsplash.com/random/800x550" alt="foto random"></figure>
-            <figure class="img"><img src="https://source.unsplash.com/random/800x550" alt="foto random"></figure>
+            <figure class="img"><img src="https://source.unsplash.com/random/800x552" alt="foto random"></figure>
+            <figure class="img"><img src="https://source.unsplash.com/random/800x553" alt="foto random"></figure>
             <figure class="img"><img src="https://mhealthintelligence.com/images/site/features/_normal/2016-04-26-rtls-feature.png" alt=""></figure>
-            <figure class="img"><img src="https://source.unsplash.com/random/800x550" alt="foto random"></figure>
-            <figure class="img"><img src="https://source.unsplash.com/random/800x550" alt="foto random"></figure>
-            <figure class="img"><img src="https://source.unsplash.com/random/800x550" alt="foto random"></figure>
+            <figure class="img"><img src="https://source.unsplash.com/random/800x555" alt="foto random"></figure>
+            <figure class="img"><img src="https://source.unsplash.com/random/800x560" alt="foto random"></figure>
+            <figure class="img"><img src="https://source.unsplash.com/random/800x559" alt="foto random"></figure>
             <figure class="img"><img src="https://i.blogs.es/df2ed8/impacto-asteroide/1024_2000.jpg" alt="impacto meteorito"></figure>
-            <figure class="img"><img src="https://source.unsplash.com/random/800x550" alt="foto random"></figure>
-            <figure class="img"><img src="https://source.unsplash.com/random/800x550" alt="foto random"></figure>
-            <figure class="img"><img src="https://source.unsplash.com/random/800x550" alt="foto random"></figure>
+            <figure class="img"><img src="https://source.unsplash.com/random/800x554" alt="foto random"></figure>
+            <figure class="img"><img src="https://source.unsplash.com/random/800x562" alt="foto random"></figure>
+            <figure class="img helper"><img src="https://source.unsplash.com/random/800x567" alt="foto random"></figure>
+            <figure class="img">
+                <article class="main__images--article">
+                    <div class="main__descritption">
+                        <h3 class="description--title">@wearemucho</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, quia reiciendis molestiae culpa illum quod in, est consequuntur aspernatur adipisci delectus iste debitis iusto labore facere voluptatum consequatur, deleniti atque.</p>
+                    </div>
+                </article>
+            </figure>
+            <figure class="img">
+                <article class="main__images--article">
+                    <div class="main__descritption">    
+                        <h3 class="description--title">Talking & Teaching</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, quia reiciendis molestiae culpa illum quod in, est consequuntur aspernatur adipisci delectus iste debitis iusto labore facere voluptatum consequatur, deleniti atque.</p>
+                    </div>
+                </article>
+            </figure>
+            <figure>
+                <article>
+                    <div class="main__descritption">
+                        <h3 class="description--title">About</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, quia reiciendis molestiae culpa illum quod in, est consequuntur aspernatur adipisci delectus iste debitis iusto labore facere voluptatum consequatur, deleniti atque.</p>
+                    </div>
+                    </a>
+                </article>
+            </figure>
         </section>
-        <article>
-            <div class="main__descritption">
-                <h3 class="description--title">@wearemucho</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, quia reiciendis molestiae culpa illum quod in, est consequuntur aspernatur adipisci delectus iste debitis iusto labore facere voluptatum consequatur, deleniti atque.</p>
-            </div>
-            <div class="main__descritption">
-                <h3 class="description--title">Talking & Teaching</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, quia reiciendis molestiae culpa illum quod in, est consequuntur aspernatur adipisci delectus iste debitis iusto labore facere voluptatum consequatur, deleniti atque.</p>
-            </div>
-            <div class="main__descritption">
-                <h3 class="description--title">About</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, quia reiciendis molestiae culpa illum quod in, est consequuntur aspernatur adipisci delectus iste debitis iusto labore facere voluptatum consequatur, deleniti atque.</p>
-            </div>
-        </article>
     </main>
     
     <footer>
-        <div class="footer__upper">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo accusantium et amet, ipsum velit delectus, quibusdam ad corrupti labore odit aliquid quia ducimus? Nostrum repellat recusandae provident, minus asperiores dolorum.</p>
-        </div>
-        <div class="footer__medium">
-            <div class="column">
-                <h6 class="footer--city">Barcelona</h6>
-                <p></p>
-                <p></p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo accusantium et amet, ipsum velit delectus, quibusdam ad corrupti labore odit aliquid quia ducimus? Nostrum repellat recusandae provident, minus asperiores dolorum.</p>
+        <section class="footer__medium">
+            <article>
+                <h4 class="footer--city">Barcelona></h4>
+                <p>+34959569856</p>
+                <p>barcelona@wearemucho.com</p>
+                <br>
+                <p>morales, 27k</p>
+                <p>08029</p>
+            </article>
+            <article>
+                <h4 class="footer--city">San Paco></h4>
+                <p>+34959569856</p>
+                <p>sanpaco@wearemucho.com</p>
+                <br>
+                <p>morales, 27k</p>
+                <p>08029</p>
+            </article>
+            <article>
+                <h4 class="footer--city">Paris></h4>
+                <p>+34959569856</p>
+                <p>paris@wearemucho.com</p>
+                <br>
+                <p>morales, 27k</p>
+                <p>08029</p>
+            </article>
+            <article>
+                <h4 class="footer--city">New York city></h4>
+                <p>+34959569856</p>
+                <p>nyc@wearemucho.com</p>
+                <br>
+                <p>morales, 27k</p>
+                <p>08029</p>
+            </article>
+        </section>
+        <section class="social">
+            <p>subscribe:</p>
+            <div class="icons">
+                <i></i>
             </div>
-            <div class="column">
-                <h6 class="footer--city">San Francisco</h6>                <p></p>
-                <p></p>
-            </div>
-            <div class="column">
-                <h6 class="footer--city">Paris</h6>
-                <p></p>
-                <p></p>
-            </div>
-            <div class="column">
-                <h6 class="footer--city">New York</h6>
-                <p></p>
-                <p></p>
-            </div>
-        </div>
+        </section>
     </footer>
 </body>
 </html>
