--- a/staff/albert-fuente/initial-app/index.html
+++ b/staff/albert-fuente/initial-app/index.html
@@ -50,6 +50,8 @@
 
     </div>
     <script src="curray.js"></script>
+    <script src="data.js"></script>
+    <script src="logic.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
