--- a/staff/jaume-villarreal/initial-app/SpecRunner.html
+++ b/staff/jaume-villarreal/initial-app/SpecRunner.html
@@ -13,9 +13,11 @@
 
   <!-- include source files here... -->
   <script src="curray.js"></script>
+  <script src="data.js"></script>
+  <script src="logic.js"></script>
 
   <!-- include spec files here... -->
-  <script src="curray.spec.js"></script>
+  <script src="logic.spec.js"></script>
 </head>
 
 <body>
