--- a/staff/jaume-villarreal/initial-app/index.html
+++ b/staff/jaume-villarreal/initial-app/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link href="https://fonts.googleapis.com/css?family=Darker+Grotesque|Play:400,700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/style.css">
         <title>🦁Initial App</title>
     </head>
@@ -21,18 +22,18 @@
                 <h2 class="header-2">Register form</h2>
                 <form class="form__input">
                     <label for="name">Name</label>
-                        <input type="text" id="name" required>
+                        <input type="text" id="name">
                     <label for="surname">Surname</label>
-                        <input type="text" id="surname" required>
+                        <input type="text" id="surname">
                     <label for="mail">E-mail</label>
-                        <input type="email" id="mail" required>
+                        <input type="email" id="mail">
                     <label for="password">Password</label>
-                        <input type="password" id="password" required>
+                        <input type="password" id="password">
                     <div class="btn-set">
                         <button type="submit" class="btn btn--form">Register</button>
                     </div>
                 </form>
-                <div class="feedback"></div>
+                <p class="panel__feedback"></p>
                 <a class="btn btn--back" href="">Back</a>
             </section>
             
@@ -52,7 +53,7 @@
                         <button type="submit" class="btn btn--form">Login</button>
                     </div>
                 </form>
-                <div class="feedback"></div>
+                <p class="panel__feedback"></p>
                 <a class="btn btn--back" href="">Back</a>
             </section>
             
@@ -62,7 +63,9 @@
             </section>
         </main>
 
-        <script src="curray/curray.js"></script>
-        <script src="main.js"></script>
+        <script src="curray.js"></script>
+        <script src="data.js"></script>
+        <script src="logic.js"></script>
+        <script src="presentation.js"></script>
     </body>
 </html>
