--- a/staff/oihane-unciti/initial-app/0.1/index.html
+++ b/staff/oihane-unciti/initial-app/0.1/index.html
@@ -31,8 +31,9 @@
                 <input type="password" id="password">
                 <button type="submit">Register</button>
             </form>
-            <p class="panel__feedback"></p>
+            
             <a href="">back</a>
+            <h4 class="letter--hide">Error credentials!</h4>
         </section>
 
         <!-- register success panel -->
@@ -49,8 +50,9 @@
                 <input type="password" id="password">
                 <button type="submit">Login</button>
             </form>
-            <p class="panel__feedback"></p>
+            
             <a href="">back</a>
+            <h4 class="letter--hide">Error credentials!</h4>
         </section>
 
         <!-- welcome panel -->
@@ -60,8 +62,6 @@
     </main>
 
     <script src="curray.js"></script>
-    <script src="data.js"></script>
-    <script src="logic.js"></script>
     <script src="main.js"></script>
 </body>
 
