update init app day 2 18h

--- a/staff/lluis-agusti/initial-app/index.html
+++ b/staff/lluis-agusti/initial-app/index.html
@@ -29,9 +29,9 @@
                 <input type="email" id="email"  minlength="5" maxlength="19" placeholder="Email"><br><br>
                 <label for="password">Password</label>
                 <input type="password" id="password" minlength="5" maxlength="19" placeholder="Password"><br><br>
-                <p class="errorTextRegister"></p>
                 <button class="button" type="submit">Register</button>
             </form>
+            <p class="panel__feedback"></p>
             <a class="button" href="">Back</a>
         </section>
 
@@ -47,10 +47,10 @@
                 <input type="email" id="email" minlength="5" maxlength="19" placeholder="Email"><br><br>
                 <label for="password">Password</label>
                 <input type="password" id="password"  minlength="4" maxlength="19"  placeholder="Password"><br><br>
-                <p class="errorTextLoginEmpty"></p>
-                <p class="errorTextLoginWrong"></p>
                 <button class="button" type="submit">Login</button>
             </form>
+            <p class="panel__feedback"></p>
+            <a class="button" href="">back</a>
         </section>
 
         <!-- welcome panels[4] -->
@@ -62,6 +62,8 @@
     </main>
 
     <script src="curray.js"></script>
+    <script src="data.js"></script>
+    <script src="logic.js"></script>
     <script src="main.js"></script>
 </body>
 
