--- a/staff/albert-fuente/initial-app2/1/SpecRunner.html
+++ b/staff/albert-fuente/initial-app2/1/SpecRunner.html
@@ -17,7 +17,7 @@
   <script src="logic.js"></script>
 
   <!-- include spec files here... -->
-  <script src="logic.spec.js"></script>
+  <script src="logic2.spec.js"></script>
 </head>
 
 <body>
