--- a/staff/christian-haag/initial-app/index.html
+++ b/staff/christian-haag/initial-app/index.html
@@ -22,13 +22,13 @@
         <section class="panel panel--hide">
             <form>
                 <label for="name">Name*</label>
-                <input type="text" id="name" required>
+                <input type="text" id="name">
                 <label for="surname">Surname*</label>
-                <input type="text" id="surname" required>
+                <input type="text" id="surname">
                 <label for="email">E-mail*</label>
-                <input type="email" id="email" required>
+                <input type="text" id="email">
                 <label for="password">Password*</label>
-                <input type="password" id="password" required>
+                <input type="password" id="password">
                 <button type="submit">Register</button>
                 <p class="alert"></p>
             </form>
@@ -44,9 +44,9 @@
         <section class="panel panel--hide">
             <form>
                 <label for="email">E-mail*</label>
-                <input type="email" id="email" required>
+                <input type="email" id="email">
                 <label for="password">Password*</label>
-                <input type="password" id="password" required>
+                <input type="password" id="password">
                 <button type="submit">Login</button>
                 <p class="alert"></p>
             </form>
@@ -63,7 +63,11 @@
             </div>
         </section>
     </main>
+
+
     <script src="curray.js"></script>
+    <script src="logic.js"></script>
+    <script src="data.js"></script>
     <script src="main.js"></script>
 </body>
 
