--- a/staff/nestor-llorens/initial-app/index.html
+++ b/staff/nestor-llorens/initial-app/index.html
@@ -22,7 +22,7 @@
         <section class="panel panel--hide">
             <form>
                 <label for="name">Name</label>
-                <input type="text" id="name">
+                <input type="text">
                 <label for="surname">Surname</label>
                 <input type="text" id="surname">
                 <label for="email">E-mail</label>
@@ -33,7 +33,7 @@
             </form>
             
             <a href="">back</a>
-            <h2 id="error"></h2> 
+            <h2 class="mailFail"></h2>
         </section>
 
         <!-- register success panel -->
@@ -61,6 +61,8 @@
     </main>
 
     <script src="main.js"></script>
+    <script src="data.js"></script>
+    <script src="logic.js"></script>
 </body>
 
 </html>
