add logic and specs to version 1

--- a/staff/christian-haag/initial-app/SpecRunner.html
+++ b/staff/christian-haag/initial-app/SpecRunner.html
@@ -18,7 +18,7 @@
     <script src="logic.js"></script>
 
     <!-- include spec files here... -->
-    <script src="logic.spec.js"></script>
+    <script src="logic.specs.js"></script>
 </head>
 
 <body>
