add panels succesRegister, login and home in components.js and their instances in presentation.js

--- a/staff/jaume-villarreal/initial-app/index.html
+++ b/staff/jaume-villarreal/initial-app/index.html
@@ -33,7 +33,7 @@
                         <button type="submit" class="btn btn--form">Register</button>
                     </div>
                 </form>
-                <p class="panel__feedback"></p>
+                <p class="panel__feedback panel--hide"></p>
                 <a class="btn btn--back" href="">Back</a>
             </section>
             
@@ -53,7 +53,7 @@
                         <button type="submit" class="btn btn--form">Login</button>
                     </div>
                 </form>
-                <p class="panel__feedback"></p>
+                <p class="panel__feedback panel--hide"></p>
                 <a class="btn btn--back" href="">Back</a>
             </section>
             
@@ -63,9 +63,10 @@
             </section>
         </main>
 
-        <script src="curray.js"></script>
-        <script src="data.js"></script>
-        <script src="logic.js"></script>
-        <script src="presentation.js"></script>
+        <script src="js/curray.js"></script>
+        <script src="js/components.js"></script>
+        <script src="js/data.js"></script>
+        <script src="js/logic.js"></script>
+        <script src="js/presentation.js"></script>
     </body>
 </html>
