--- a/staff/jaume-villarreal/initial-app/testing/SpecRunner.html
+++ b/staff/jaume-villarreal/initial-app/testing/SpecRunner.html
@@ -12,9 +12,9 @@
   <script src="vendor/jasmine/jasmine-3.4.0/boot.js"></script>
 
   <!-- include source files here... -->
-  <script src="curray.js"></script>
-  <script src="data.js"></script>
-  <script src="logic.js"></script>
+  <script src="../js/curray.js"></script>
+  <script src="../js/data.js"></script>
+  <script src="../js/logic.js"></script>
 
   <!-- include spec files here... -->
   <script src="logic.spec.js"></script>
