--- a/staff/oihane-unciti/mucho-layout/all-sass/main.html
+++ b/staff/oihane-unciti/mucho-layout/all-sass/main.html
@@ -38,34 +38,40 @@
     </nav>
 
     <main class="mosaic">
-        <img class="img img__big1" src="https://placeimg.com/640/480/nature" alt="">
-        <img class="img" src="https://placeimg.com/640/480/arch" alt="">
-        <img class="img img__big3" src="https://placeimg.com/640/480/nature" alt="">
-        <img  class="img" src="https://placeimg.com/640/480/arch" alt="">
-        <img class="img" src="https://placeimg.com/640/480/nature" alt="">
-        <img class="img img__big6" src="https://placeimg.com/640/480/arch" alt="">
-        <img class="img" src="https://placeimg.com/640/480/nature" alt="">
-        <img class="img" src="https://placeimg.com/640/480/arch" alt="">
-        <img class="img img__big9" src="https://placeimg.com/640/480/nature" alt="">
-        <img class="img" src="https://placeimg.com/640/480/arch" alt="">
+        <div class="container_img">
+            <img class="img img__big1" src="https://placeimg.com/640/480/nature" alt="">
+            <img class="img" src="https://placeimg.com/640/480/arch" alt="">
+            <img class="img img__big3" src="https://placeimg.com/640/480/nature" alt="">
+            <img  class="img" src="https://placeimg.com/640/480/arch" alt="">
+            <img class="img" src="https://placeimg.com/640/480/nature" alt="">
+            <img class="img img__big6" src="https://placeimg.com/640/480/arch" alt="">
+            <img class="img" src="https://placeimg.com/640/480/nature" alt="">
+            <img class="img" src="https://placeimg.com/640/480/arch" alt="">
+            <img class="img img__big9" src="https://placeimg.com/640/480/nature" alt="">
+            <img class="img" src="https://placeimg.com/640/480/arch" alt="">
+        </div>´
+        <div class="article">
+            <article class="article__information">  
+                <a href=""></a>
+                <p>What does brand strategy mean to you? How do powerful ideas become into powerful meaning?
+                See our approach here:… </p>   
+            </article>
 
-        <article class="article__information">  
-        <a href=""></a>
-        <p>What does brand strategy mean to you? How do powerful ideas become into powerful meaning?
-        See our approach here:… </p>   
-        </article>
+            <article class="article__information" >
+                <h3>Talking & Teaching</h3>
+                <p>What does brand strategy mean to you? How do powerful ideas become into powerful meaning? 
+                    See our approach here:… </p>     
+            </article>
 
-        <article class="article__information" >
-            <h3>Talking & Teaching</h3>
-            <p>What does brand strategy mean to you? How do powerful ideas become into powerful meaning? 
-                See our approach here:… </p>     
-        </article>
+            <article class="article__information">
+                <h3>About</h3>
+                <p>What does brand strategy mean to you? How do powerful ideas become into powerful meaning?
+                    See our approach here:… </p> 
+            </article>
+        </div>
+        
 
-        <article class="article__information">
-            <h3>About</h3>
-            <p>What does brand strategy mean to you? How do powerful ideas become into powerful meaning?
-                See our approach here:… </p> 
-        </article>
+        
     </main>
 
     <footer class="footer">
