acabats tots comentaris de main, logic i components

--- a/staff/adria-arquimbau/initial-app/3/index.html
+++ b/staff/adria-arquimbau/initial-app/3/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <main>
-        <h1>Initial App</h1>
+        <h1 class="">Initial App</h1>
 
         <!-- initial panel 0-->
         <section class="panel panel--show">
