--- a/staff/jorge-rodri/initial-app/index.html
+++ b/staff/jorge-rodri/initial-app/index.html
@@ -41,7 +41,7 @@
             Ok, registered succeeded, you can now proceed to <a href="">login</a>.
         </section>
 
-        <!-- register panel -->
+        <!-- login panel -->
         <section class="panel panel--hide">
             <form>
                 <label for="email">E-mail</label>
@@ -57,11 +57,14 @@
         <section class="panel panel--hide">
             <h2>Welcome!</h2>
         </section>
+
+        <!--feedback panel-->
     </main>
 
     <script src="curray.js"></script>
     <script src="data.js"></script>
     <script src="logic.js"></script>
+    <script src="components.js"></script>
     <script src="main.js"></script>
 </body>
 
