update initial app

--- a/staff/manuel-barzi/initial-app/4/index.html
+++ b/staff/manuel-barzi/initial-app/4/index.html
@@ -31,7 +31,7 @@
                 <input type="password" id="password">
                 <button type="submit">Register</button>
             </form>
-            <p class="panel__feedback"></p>
+            <p class="panel__feedback feedback feedback--error">A message.</p>
             <a href="">back</a>
         </section>
 
@@ -49,7 +49,7 @@
                 <input type="password" id="password">
                 <button type="submit">Login</button>
             </form>
-            <p class="panel__feedback"></p>
+            <p class="panel__feedback feedback feedback--error">A message.</p>
             <a href="">back</a>
         </section>
 
