--- a/staff/adria-arquimbau/initial-app/3/index.html
+++ b/staff/adria-arquimbau/initial-app/3/index.html
@@ -56,6 +56,7 @@
         <!-- welcome panel 4-->
         <section class="panel panel--hide">
             <h2>Welcome!</h2>
+            <a href="">back</a>
         </section>
     </main>
 
