--- a/staff/albert-fuente/initial-app2/1/index.html
+++ b/staff/albert-fuente/initial-app2/1/index.html
@@ -40,7 +40,7 @@
             Ok, registered succeeded, you can now proceed to <a href="">login</a>.
         </section>
 
-        <!-- register panel -->
+        <!-- login panel -->
         <section class="panel panel--hide">
             <form>
                 <label for="email">E-mail</label>
@@ -56,12 +56,21 @@
         <!-- welcome panel -->
         <section class="panel panel--hide">
             <h2>Welcome!</h2>
+            <a href="">Log out</a>
+        </section>
+
+        <!-- Error panel -->
+        <section class="panel panel--hide confirm">
+                        <h2>Error</h2>
+                        <p class="panel__feedback"></p>
+
         </section>
     </main>
 
     <script src="curray.js"></script>
     <script src="data.js"></script>
     <script src="logic.js"></script>
+    <script src="components.js"></script>
     <script src="main.js"></script>
 </body>
 
