--- a/staff/jaume-villarreal/initial-app/index.html
+++ b/staff/jaume-villarreal/initial-app/index.html
@@ -39,7 +39,11 @@
             
             <section class="panel panel--hide successRegister">
                 <h2 class="header-2">Registered</h2>
-                <p class="text-box">Registered succeeded, you can now proceed to <a class="btn btn--inline" href="#">login</a>.</p>
+                <p class="text-box">Registered succeeded</p>
+                <div class="btn-set">
+                    <a href="" class="btn">Back</a>
+                    <a href="#" class="btn">Login</a>
+                </div>
             </section>
             
             <section class="panel panel--hide form">
