add iteration 2 initial-app with components

--- a/staff/christian-haag/initial-app/2/index.html
+++ b/staff/christian-haag/initial-app/2/index.html
@@ -15,7 +15,7 @@
         <h1>Initial App</h1>
         <!-- initial panel -->
         <section class="panel panel--show">
-            <div class="link"></span><a href="">Register</a> or <a href="">Login</a></div>
+            <div class="link"><a href="">Register</a> or <a href="">Login</a></div>
         </section>
 
         <!-- register panel -->
@@ -59,12 +59,12 @@
             <p class="name"></p>
             <img src="https://media.giphy.com/media/JQ3IMbDi5Jkw8/giphy.gif" alt="dancing dog">
             <div class="anch">
-                <a href="">back</a>
+                <button class="panel panel__logout">Logout</button>
             </div>
         </section>
     </main>
 
-
+    <script src="components.js"></script>
     <script src="curray.js"></script>
     <script src="logic.js"></script>
     <script src="data.js"></script>
