las version initial-app

--- a/staff/ara-manjon/5/index.html
+++ b/staff/ara-manjon/5/index.html
@@ -31,13 +31,7 @@
                 <input type="password" id="password">
                 <button type="submit">Register</button>
             </form>
-                    <!-- feedback panel -->
-        <section class="panel__feedback">
-                <p class="panel__feedback"></p>
-                <a href="">try again</a>
-        </section>
-
-
+            <p class="panel__feedback feedback feedback--error">A message.</p>
             <a href="">back</a>
         </section>
 
@@ -55,16 +49,15 @@
                 <input type="password" id="password">
                 <button type="submit">Login</button>
             </form>
-            <p class="panel__feedback"></p>
+            <p class="panel__feedback feedback feedback--error">A message.</p>
             <a href="">back</a>
         </section>
 
         <!-- welcome panel -->
         <section class="panel panel--hide">
-            <h2 class="panel__welcome"></h2>
-            <a href="">exit</a>
+            <h2>Welcome!</h2>
+            <button>Logout</button>
         </section>
-
     </main>
 
     <script src="curray.js"></script>
