--- a/staff/jorge-rodri/initial-app/index.html
+++ b/staff/jorge-rodri/initial-app/index.html
@@ -6,34 +6,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link href="https://fonts.googleapis.com/css?family=Hanalei&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <main class="panel--settings">
-        <h1 class="panel__title">Initial App</h1>
+    <main>
+        <h1>Initial App</h1>
 
         <!-- initial panel -->
         <section class="panel panel--show">
-            <a href="">Register</a> <a href="">Login</a>
+            <a href="">Register</a> or <a href="">Login</a>.
         </section>
 
         <!-- register panel -->
         <section class="panel panel--hide">
-            <form class="panel__form">
+            <form>
                 <label for="name">Name</label>
                 <input type="text" id="name">
                 <label for="surname">Surname</label>
                 <input type="text" id="surname">
                 <label for="email">E-mail</label>
-                <input type="text" id="email">
+                <input type="email" id="email">
                 <label for="password">Password</label>
                 <input type="password" id="password">
                 <button type="submit">Register</button>
             </form>
-            <h4 id="wrong"></h4>
-            <a class="link--position" href="">back</a>
+            <p class="panel__feedback feedback feedback--error">A message.</p>
+            <a href="">back</a>
         </section>
 
         <!-- register success panel -->
@@ -50,15 +49,15 @@
                 <input type="password" id="password">
                 <button type="submit">Login</button>
             </form>
+            <p class="panel__feedback feedback feedback--error">A message.</p>
             <a href="">back</a>
         </section>
 
         <!-- welcome panel -->
         <section class="panel panel--hide">
             <h2>Welcome!</h2>
+            <button>Logout</button>
         </section>
-
-        <!--feedback panel-->
     </main>
 
     <script src="curray.js"></script>
