update optimized components

--- a/staff/jose-ortuno/initial-app/index.html
+++ b/staff/jose-ortuno/initial-app/index.html
@@ -26,6 +26,7 @@
                 <input id="password" class="register__input register__form-password" type="password" placeholder="Password*">
                 <input id="submit" class="register__input register__form-submit" type="submit" value="Send">
             </form>
+            <p class="error panel--hide">A message.</p>
             <a class="panel__section--back" href="">back</a>
         </section>
         <!-- Registered panel-->
@@ -41,6 +42,7 @@
                 <input id="password" class="login__input" type="password" placeholder="password">
                 <input id="submit" class="login__input login__form-submit" type="submit" value="Send">
             </form>
+            <p class="error panel--hide">A message.</p>
             <a class="panel__section--back" href="">back</a>
         </section>
         <!-- Welcome panel -->
@@ -50,9 +52,9 @@
             <a class="panel__section--back" href="">Logout</a>
         </section>
         <!-- Error panel -->
-        <section id="error" class="error panel--hide">
+        <!-- <section id="error" class="error panel--hide">
             <p class=""></p>
-        </section>
+        </section> -->
     </main>
     <script src="js/curray.js"></script>
     <script src="js/data.js"></script>
