--- a/staff/jorge-rodri/initial-app/index.html
+++ b/staff/jorge-rodri/initial-app/index.html
@@ -56,6 +56,12 @@
         <!-- welcome panel -->
         <section class="panel panel--hide">
             <h2>Welcome!</h2>
+            <h3>Search Ducks</h3>
+            <form method="GET">
+                <label for="search">Search</label>
+                <input type="text" id="search">
+                <button type="submit">search</button>
+            </form>
             <button>Logout</button>
         </section>
     </main>
